# SysMon

./: CMakeLists.txt
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/monitors/: cpumonitor.cpp  cpumonitor.h  diskmonitor.cpp  diskmonitor.h  networkmonitor.cpp  networkmonitor.h  rammonitor.cpp  rammonitor.h
src/widgets/: monitorwidget.cpp  monitorwidget.h
